Attempt to fix horizontal scroll bars issue.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,9 @@
 
 
+html, body {
+    overflow-x: hidden;
+}
+
 .header {
     text-align: center;
     padding-bottom: 1%;
